--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.6"
   }
 }
