--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desarrollo de Frontend para Handbook",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
