--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.8",
     "yup": "^0.32.11"
