--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/IsabelaCeballos/Frontend-Handbook#readme",
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@uploadcare/react-widget": "^2.3.0",
     "js-cookie": "^3.0.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
